<resources>
    <string name="app_name">OPSC7312_POE_TACTICAL_TRADES</string>
    <string name="title_notifications">Notifications</string>

    <string name="amazon_icon">amazon_icon</string>
    <string name="account">Account</string>
    <string name="edit_username">Edit Username</string>
    <string-array name="spinner_itemsForWalletType">
        <item>BTC</item>
        <item>ETH</item>
        <item>USDT</item>
    </string-array>
    <string-array name="spinner_coin_names">
        <item>Bitcoin</item>
        <item>Ethereum</item>
        <item>Tether</item>
        <item>Binance Coin</item>
        <item>Solana</item>
        <item>USD Coin</item>
        <item>XRP</item>
        <item>Dogecoin</item>
        <item>Lido Staked Ether</item>
        <item>Toncoin</item>
        <item>TRON</item>
        <item>Cardano</item>
        <item>Avalanche</item>
        <item>Wrapped stETH</item>
        <item>Wrapped Bitcoin</item>
        <item>Shiba Inu</item>
        <item>Wrapped Ethereum</item>
        <item>Chainlink</item>
        <item>Bitcoin Cash</item>
        <item>Polkadot</item>
        <item>LEO Token</item>
        <item>Dai</item>
        <item>Uniswap</item>
        <item>Litecoin</item>
        <item>NEAR Protocol</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_password">Edit Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="display">Display</string>
    <string name="delete_account_button">Delete account</string>
    <string name="select_theme">Select Theme</string>
    <string name="graph_theme">Graph Theme</string>
    <string name="language">Language</string>
    <string name="displayReportSetting">Display Report</string>
    <string name="displayReportTitle">Report</string>
    <string name="displayWalletsReport">Wallet Overview</string>
    <string name="notifications">Notifications</string>
    <string name="balance">Balance</string>
    <string name="starting_value">Starting Value</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="register">REGISTER</string>
    <string name="username">Username:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="home">Home</string>
    <string name="trade">Trade</string>
    <string name="watchlist">WatchList</string>
    <string name="wallets">Wallets</string>
    <string name="news">News</string>
    <string name="money">Money</string>
    <string name="confirm">Confirm</string>
    <string name="price">$ Price</string>
    <string name="total_balance">Total balance</string>
    <string name="news_articles">News Articles</string>
    <string name="select_colour">Select Colour</string>
    <string name="add_to_watch_list">Add to Watch List</string>
    <string name="buy_coin">Buy Coin</string>
    <string name="sell_coin">Sell Coin</string>
    <string name="my_wallet_value">My Wallet Value</string>
    <string name="theme">Theme</string>
    <string name="select_coin">Select Coin</string>
    <string name="save">Save</string>
    <string name="my_wallets">My Wallets</string>
    <string name="my_watchlist">My watchlist</string>
    <string name="title_display_report_btn">Display Report</string>
    <string name="coin">Coin</string>
    <string name="settings_header">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="graph_theme_1">CyberSpace</string>
    <string name="graph_theme_2">Unicorn</string>
    <string name="graph_theme_3">Deep Ocean(colorblind red/green)</string>
    <string name="graph_theme_4">Pandora Green(colorblind blue/yellow)</string>
    <string name="language_1">English</string>
    <string name="language_2">Afrikaans</string>
    <string name="theme_1">Light Theme</string>
    <string name="theme_2">Dark Theme</string>
    <string name="default_selection">Select an option</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="display_report">Display Report</string>
    <string name="gained_lost">Gained/Lost</string>
    <string name="wallet_overview">Wallet Overview</string>
</resources>