<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@id/navigation_news"
        android:icon="@drawable/newspaper_solid"
        android:title="@string/news" />
    <item android:id="@id/navigation_wallets"
        android:icon="@drawable/wallet"
        android:title="@string/wallets" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/eye_solid"
        android:title="@string/watchlist" />

    <item android:id="@id/navigation_marketplace"
        android:icon="@drawable/trade_solid"
        android:title="@string/trade" />
</menu>